# django-yaml-field

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: python-publish.yml
src/django_yaml_field/: __init__.py  fields.py
src/django_yaml_field.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/django_yaml_field_pkg/: fields.py
