[metadata]
name = django_yaml_field
version = 0.0.6
author = Kalinin Mitko
author_email = kalinin.mitko@gmail.com
description = Same as Django JSONField but represent it as YAML (internally stores as JSON)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/null-none/django-yaml-field
project_urls =
    Bug Tracker = https://github.com/null-none/django-yaml-field/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
